--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,45 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
+attrs==25.3.0
+beautifulsoup4==4.13.4
+bs4==0.0.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
+distro==1.9.0
 Django==4.2
-djangorestframework==3.14.0
 django-cors-headers==3.14.0
+djangorestframework==3.14.0
 docopt==0.6.2
+frozenlist==1.6.0
+greenlet==3.2.2
 gunicorn==20.1.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+multidict==6.4.3
+openai==0.28.0
 pipreqs==0.4.13
+playwright==1.52.0
+propcache==0.3.1
 psycopg2-binary==2.9.10
+pydantic==2.11.4
+pydantic_core==2.33.2
+pyee==13.0.0
 python-dotenv==1.0.1
 pytz==2025.2
 requests==2.32.3
 setuptools==80.3.1
+sniffio==1.3.1
+soupsieve==2.7
 sqlparse==0.5.3
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
 urllib3==2.4.0
 yarg==0.1.10
-
+yarl==1.20.0
