--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Django==4.2
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
 docopt==0.6.2
+faiss-cpu==1.11.0
 frozenlist==1.6.0
 greenlet==3.2.2
 gunicorn==20.1.0
@@ -22,7 +23,9 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 multidict==6.4.3
+numpy==2.2.5
 openai==0.28.0
+packaging==25.0
 pipreqs==0.4.13
 playwright==1.52.0
 propcache==0.3.1
@@ -32,11 +35,13 @@ pydantic_core==2.33.2
 pyee==13.0.0
 python-dotenv==1.0.1
 pytz==2025.2
+regex==2024.11.6
 requests==2.32.3
 setuptools==80.3.1
 sniffio==1.3.1
 soupsieve==2.7
 sqlparse==0.5.3
+tiktoken==0.9.0
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
