--- a/requirements.txt
+++ b/requirements.txt
@@ -15,17 +15,29 @@ django-cors-headers==3.14.0
 djangorestframework==3.14.0
 docopt==0.6.2
 faiss-cpu==1.11.0
+filelock==3.18.0
 frozenlist==1.6.0
+fsspec==2025.3.2
 greenlet==3.2.2
 gunicorn==20.1.0
 h11==0.16.0
+hf-xet==1.1.1
 httpcore==1.0.9
 httpx==0.28.1
+huggingface-hub==0.31.2
 idna==3.10
+Jinja2==3.1.6
+joblib==1.5.0
+lxml==5.4.0
+MarkupSafe==3.0.2
+mpmath==1.3.0
 multidict==6.4.3
+neo4j==5.28.1
+networkx==3.4.2
 numpy==2.2.5
 openai==0.28.0
 packaging==25.0
+pillow==11.2.1
 pipreqs==0.4.13
 playwright==1.52.0
 propcache==0.3.1
@@ -35,14 +47,24 @@ pydantic_core==2.33.2
 pyee==13.0.0
 python-dotenv==1.0.1
 pytz==2025.2
+PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+sentence-transformers==4.1.0
 setuptools==80.3.1
 sniffio==1.3.1
 soupsieve==2.7
 sqlparse==0.5.3
+sympy==1.14.0
+threadpoolctl==3.6.0
 tiktoken==0.9.0
+tokenizers==0.21.1
+torch==2.7.0
 tqdm==4.67.1
+transformers==4.51.3
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
