UPDATE: Preliminary stage of round 2
Integrated GraphRAG, RAG and Store locator

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 beautifulsoup4==4.13.4
 bs4==0.0.2
+certifi==2025.4.26
 Django==4.2
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
 faiss-cpu==1.11.0
 gunicorn==20.1.0
 langchain==0.3.25
-langchain-openai==0.3.17
 langchain-community==0.3.24
+langchain-core==0.3.60
+langchain-neo4j==0.4.0
+langchain-openai==0.3.17
 numpy==2.2.5
 neo4j==5.28.1
+neo4j-graphrag==1.6.1
 playwright==1.52.0
 requests==2.32.3
 openai==1.79.0
+tqdm==4.67.1
+urllib3==2.4.0
