UPDATE: Enhanced session context and UI design

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ neo4j==5.28.1
 neo4j-graphrag==1.6.1
 playwright==1.52.0
 requests==2.32.3
+rapidfuzz==3.13.0
 openai==1.79.0
 tqdm==4.67.1
 urllib3==2.4.0
